# cpp_belts_coursera

./: CMakeLists.txt  TestRunner.h  f1  f2  input.txt  main.cpp
brown_belt/w1/: hash_person.cpp  hash_point.cpp  hash_set.cpp  secondary_index.cpp  secondary_index2.cpp  secondary_index_v2.cpp  set_iterator_next.cpp
common_headers/: test_runner.h
red_belt/w1/: deque_from_vectors.cpp  log.cpp  max_element_if.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  uniq_id.cpp  update_field.cpp
red_belt/w2/: booking.cpp  learner.cpp  main.cpp  slow_book.cpp  slow_express.cpp  sort_students.cpp
red_belt/w3/: linked_list.cpp  object_pool.cpp  simple_vector.cpp  simple_vector.h  sportsmen.cpp  swap_sort_copy.cpp
red_belt/w4/: airport_counter.cpp  stack_vector.h  stats.cpp  stats.h  text_editor.cpp  translator.cpp
red_belt/w5/: concurrent_map.cpp  explore_key_words.cpp  group_heavy_strings.cpp  josephus_permutation.cpp  matrix_sum.cpp  merge_sort_3.cpp  once_more_joseph.cpp  other_joseph.cpp  priority_collection_2.cpp  simple_vector.h  simple_vector_2.h  split_into_sentences.cpp  synchronized.cpp
white_belt/w1/: white_gcd.cpp  white_natural_division.cpp  white_squere_equation.cpp
white_belt/w2/: BuildMapValuesSet.cpp  MoveStrings.cpp  PalindromeFilter.cpp  Reverse.cpp  Reversed.cpp  UpdateIfGreater.cpp  anagrahms.cpp  bus_stops.cpp  bus_stops_2.cpp  synonims.cpp  tasks_organizer.cpp  unique_strings.cpp  worry_queue.cpp
white_belt/w3/: PersonName_2.cpp  PersonName_3.cpp  compare_ignore_register.cpp  sort_by_module.cpp
white_belt/w4/: EnsureEqual.cpp  InvertableFunction.cpp  InvertableFunction_2.cpp  LectureTitle.cpp  _13549043214800e40c8444137d82a63b_rational_mult_div.cpp  _3eeecdad5734b31db47bc7272453f0ab_rational_interface.cpp  _495c8a484aae0f65ac79131e20f37d3d_time_server.cpp  _5e163726188df62884bc6a5e9777eb33_rational_throw.cpp  _9d5919cda1901a8bc1955a69a74865b1_rational_map.cpp  _ce23ea19242276b22976595011c64042_rational_eq_add_sub.cpp  _e1ae6abc912ed8054b3bc9cf8f208258_rational_io.cpp  print_rounded_doubles.cpp  print_table.cpp  read_from_file.cpp
white_belt/w5/: _c9ebf0f7b7682fc14001b131523d6a6b_project_template.cpp
yellow_belt/w1/: TaskStatus.cpp  all_square.cpp  blocks_total_mass.cpp  eR6tjoqPEeianAr0yIdmDg_798cb0e08a8f11e8a5de191fb90c5177_matrix_sum.cpp  get_reference.cpp  temp_over_mean_2.cpp  unique_regions.cpp
yellow_belt/w2/: _35f23c083d8ca82ca608f8b506706626_test_equation.cpp  _4a08b230ff3862815002f561ce320ca0_test_person.cpp  _de8ebd63ad7a6913565dbd0f6425ecdc_test_rational.cpp  bus_stops_2.cpp
(+129 files in other folders)
